# frogclawclient

./: .gitignore  .gitmodules  README-AR.md  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-RU.md  README-ZH-TW.md  README.md  agents.md  cliff.toml  index.html  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test-build.yml  test-windows-build.yml
docs/: agent-backend-architecture.md  agent-dual-engine-architecture.md  open-agent-sdk-to-codex-rs-replacement.html  project-memory-system-redesign.html
scripts/: prepare-claude-mem.mjs  prepare-codex-app-server.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: bridge.rs  lib.rs  permission.rs  security.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: builtin_tools.rs  crypto.rs  db.rs  document_parser.rs  error.rs  file_store.rs  mcp_client.rs  path_vars.rs  rag.rs  repo.rs  search.rs  storage_migration.rs  storage_paths.rs  types.rs  vector_store.rs  webdav.rs
src-tauri/crates/core/src/entity/: agent_sessions.rs  conversations.rs  mod.rs
src-tauri/crates/core/src/repo/: agent_session.rs  artifact.rs  backup.rs  cli_config.rs  context_source.rs  conversation.rs  conversation_branch.rs  conversation_category.rs  drawing.rs  gateway.rs  gateway_key.rs  knowledge.rs  mcp_server.rs  memory.rs  message.rs  program_policy.rs  provider.rs  provider_key.rs  search_provider.rs  settings.rs  skill.rs  stored_file.rs  tool_execution.rs
src-tauri/crates/core/tests/: cli_config_integration.rs  gateway_usage_integration.rs  repo_integration.rs
src-tauri/crates/migration/: Cargo.toml
src-tauri/crates/migration/src/: lib.rs  m20250717_000001_add_agent_support.rs  m20260430_000001_add_conversation_thinking_level.rs  m20260503_000001_add_conversation_projects.rs  m20260503_000002_add_agent_engine_fields.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: anthropic.rs  cohere.rs  gemini.rs  jina.rs  lib.rs  openai.rs  openai_images.rs  openai_responses.rs  reasoning.rs  registry.rs  voyage.rs
src-tauri/sidecar/platform/src/: index.ts
src-tauri/src/: claude_mem.rs  context_manager.rs  frogclaw_config.rs  indexing.rs  lib.rs  main.rs  paths.rs  tray.rs  window_state.rs
src-tauri/src/commands/: agent.rs  artifacts.rs  backup.rs  branches.rs  context_sources.rs  conversation_categories.rs  conversations.rs  drawing.rs  file_cleanup.rs  files.rs  files_page.rs  frogclaw_account.rs  home_tools.rs  knowledge.rs  mcp.rs  memory.rs  messages.rs  mod.rs  platform_bridge.rs  providers.rs  search.rs  settings.rs  skills.rs  storage.rs  webdav.rs
src/components/: LoginDialog.tsx
src/components/chat/: ChatInspector.tsx  ChatMinimap.tsx  ChatSidebar.tsx  ChatView.tsx  ConversationSettingsModal.tsx  InputArea.tsx  ModelSelector.tsx  MultiModelDisplay.tsx  PermissionCard.tsx  ToolCallCard.tsx  chatStreaming.ts
src/components/dialogs/: UpdateDialog.tsx
src/components/drawing/: DrawingComposer.tsx  DrawingImageStrip.tsx
src/components/layout/: CommandPalette.tsx  ContentArea.tsx  GlobalCopyMenu.tsx  Sidebar.tsx  TitleBar.tsx
src/contexts/: UpdateContext.tsx
src/hooks/: useGlobalOverlayScrollbars.ts  useKeyboardShortcuts.ts  useUpdateCheck.ts  useUpdateChecker.tsx
src/lib/: browserMock.ts  chatImageActions.ts  chatMarkdown.ts  convIcon.ts  drawingModels.ts  exportChat.ts  frogclawConfig.ts  homeApi.ts  memoryUtils.ts  providerDeepLink.ts  searchUtils.ts  shortcutActions.ts  shortcuts.ts  tokenFormat.ts  updater.ts
src/pages/: ChatPage.tsx  HomePage.tsx  IMChannelsPage.tsx  LogsPage.tsx  MemoryPage.tsx  SkillsPage.tsx
src/stores/: agentStore.ts  conversationStore.ts  frogclawAuthStore.ts  index.ts  memoryStore.ts  settingsStore.ts  uiStore.ts  userProfileStore.ts
src/types/: agent.ts  backup.ts  frogclawAccount.ts  index.ts  memory.ts
website/: package.json
website/docs/: features.md  index.md
(+107 files in other folders)
